fix: Fix Safari layout issues

--- a/assets/style.css
+++ b/assets/style.css
@@ -40,14 +40,9 @@ a:hover {
     display: flex;
     gap: 1.5em;
     flex-wrap: wrap;
-    margin-left: 35px;
-    margin-right: 35px;
+    margin: 0 35px;
     color: #00275B;
     font-size: 1.05em;
-}
-
-.header-links li:nth-child(2) {
-    cursor: pointer;
 }
 
 .icon-list {
@@ -114,9 +109,11 @@ main {
 .main-content {
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
     flex: 0 1 1200px;
-    justify-content: center;
+    min-width: 200px;
+    margin: 60px;
 }
 
 .heading {
@@ -129,6 +126,7 @@ main {
 
 .featuredProduct {
     margin: calc(1ex / 0.42) 0;
+    width: 100%;
 }
 
 /* FOOTER */
@@ -147,11 +145,10 @@ footer {
     display: flex;
     justify-content: space-between;
     margin: calc(1ex / 0.42) 0;
-    flex-wrap: wrap;
 }
 
 .footer-list {
-    margin: calc(1ex / 0.42) 0;
+    margin: calc(1ex / 0.42) 1.5rem;
 }
 
 .footer-list li {
@@ -400,7 +397,6 @@ footer {
 
 .productImage {
     filter: drop-shadow(0 10px 5px rgb(189, 188, 188));
-    width: 90%;
     align-self: center;
 }
 
